--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "grunt-fontmin",
-  "version": "0.1.2",
-  "description": "grunt plugin to minimize Chinese font",
+  "name": "grunt-fontmin-ex",
+  "version": "0.2.0",
+  "description": "grunt plugin to minimize CJK font",
   "main": "tasks/fontmin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wacky6/grunt-fontmin.git"
+    "url": "git+https://github.com/tamaina/grunt-fontmin.git"
   },
   "keywords": [
     "grunt",
     "font",
     "minimize",
     "strip",
-    "chinese"
+    "chinese",
+    "japanese",
+    "cjk"
   ],
   "author": {
-    "name": "wacky6",
-    "email": "416707889@qq.com"
+    "name": "tamaina",
+    "email": "tamaina@hotmail.co.jp"
   },
   "engines": {
     "node": ">= 4.0.0",
@@ -27,13 +29,14 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wacky6/grunt-fontmin/issues"
+    "url": "https://github.com/tamaina/grunt-fontmin/issues"
   },
-  "homepage": "https://github.com/wacky6/grunt-fontmin#readme",
+  "homepage": "https://github.com/tamaina/grunt-fontmin#readme",
   "dependencies": {
-    "chalk": "^1.1.1",
-    "html-to-text": "^1.3.2",
-    "node-sfnt": "0.0.21"
+    "chalk": "^1.1.3",
+    "html-to-text": "^1.6.2",
+    "node-sfnt": "0.0.21",
+    "ttf2woff2": "^2.0.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5"
